# graphviz

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml
docs/: doc.md
examples/ex_1/: graph3.cpp
examples/ex_2/: graph.cpp
examples/ex_3/: graph_generic.cpp
examples/ex_4/: graph.cpp
examples/ex_4/include/: edge.h  graph.h  nodes.h
examples/golden_graph/: Node.cpp  Node.h  Node.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp  vim
include/: readme.txt
libs/: readme.txt
qt_part/: CMakeLists.txt  export.json  graphviz.cpp  graphviz.h  graphviz.ui  main.cpp
src/: main.cpp  readme.txt
tests/: CMakeLists.txt  edgetest.cpp  graphTest.cpp  nodeTest.cpp  readme.txt  test.cpp  test_graph.cpp
tools/: pre-commit  readme.txt  setup_hooks
